# RobotIntelligenceReport

./: .gitignore  .gitmodules  CMakeLists.txt  data.txt  readme.md
cnn/: CMakeLists.txt  cnn.cpp  cnn.hpp  convolution2d.hpp  cross_entropy_loss.hpp  declaration.hpp  linear.hpp  main.cpp  relu.hpp  reshape.hpp
